--- a/csh_clash.ini
+++ b/csh_clash.ini
@@ -7,6 +7,7 @@ ruleset=Mainland,[]GEOIP,CN
 ;国外
 ruleset=Reddit,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Reddit/Reddit.list
 ruleset=Amazon,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Amazon/Amazon.list
+ruleset=Amazon,https://raw.githubusercontent.com/Olddriverrr/1/main/Amazon.list
 ruleset=Game Platform,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Epic/Epic.list
 ruleset=Game Platform,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Steam/Steam.list
 ruleset=Supercell,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Supercell/Supercell.list
